# MyFirstRepos

./: CMakeLists.txt  build-win.bat  git_commands.txt  readme.txt
engine/: CMakeLists.txt
engine/include/: EntryPoint.h
engine/include/framework/: actor.h  application.h  core.h  object.h  world.h
engine/src/: EntryPoint.cpp
engine/src/framework/: actor.cpp  application.cpp  object.cpp  world.cpp
game/: CMakeLists.txt
game/include/framework/: application.h
game/include/game_framework/: GameApp.h
game/src/: main.cpp
game/src/framework/: application.cpp
game/src/game_framework/: GameApp.cpp
